--- a/about.html
+++ b/about.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="About my favorite book/game">
-    <meta name="keywords" content="about, characters, story">
+    <meta name="description" content="About Age of Empires II">
+    <meta name="keywords" content="AoE2, civilizations, history">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>О книге/игре</title>
+    <title>О Age of Empires II</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>О книге/игре</h1>
+        <h1>О Age of Empires II</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="about.html">О книге/игре</a></li>
+                <li><a href="about.html">О игре</a></li>
                 <li><a href="gallery.html">Галерея</a></li>
             </ul>
         </nav>
@@ -23,15 +23,17 @@
     <main>
         <section id="story">
             <h2>Сюжет</h2>
-            <p>Описание сюжета книги/игры...</p>
+            <p>Age of Empires II рассказывает о великих сражениях, о построении и расширении могущественных империй в Средневековье. Игроки управляют разными цивилизациями, каждая из которых имеет свои уникальные характеристики, архитектуру и военную мощь. Игра разворачивается от тёмных веков до эпохи империй.</p>
         </section>
 
         <section id="characters">
-            <h2>Персонажи</h2>
+            <h2>Цивилизации</h2>
             <ul>
-                <li>Персонаж 1</li>
-                <li>Персонаж 2</li>
-                <li>Персонаж 3</li>
+                <li>Британцы</li>
+                <li>Франки</li>
+                <li>Викинги</li>
+                <li>Китайцы</li>
+                <li>Японцы</li>
             </ul>
         </section>
 
@@ -39,14 +41,16 @@
             <h2>Интересные факты</h2>
             <table>
                 <tr><th>Факт</th><th>Описание</th></tr>
-                <tr><td>Факт 1</td><td>Описание факта 1</td></tr>
-                <tr><td>Факт 2</td><td>Описание факта 2</td></tr>
+                <tr><td>Дата выпуска</td><td>Игра вышла в 1999 году</td></tr>
+                <tr><td>Разработчик</td><td>Ensemble Studios</td></tr>
+                <tr><td>Количество цивилизаций</td><td>Оригинальная версия включала 13, позже добавили ещё</td></tr>
+                <tr><td>Дополнения</td><td>The Conquerors, The Forgotten, The African Kingdoms и другие</td></tr>
             </table>
         </section>
     </main>
 
     <footer>
-        <p>© 2024 Мой сайт</p>
+        <p>© 2024 Age of Empires II Fan Site</p>
     </footer>
 
     <script src="script.js"></script>
