--- a/gallery.html
+++ b/gallery.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Gallery of images from my favorite book/game">
-    <meta name="keywords" content="gallery, images, book, game">
+    <meta name="description" content="Gallery of Age of Empires II images">
+    <meta name="keywords" content="AoE2, images, gallery">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Галерея</title>
     <link rel="stylesheet" href="style.css">
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="about.html">О книге/игре</a></li>
+                <li><a href="about.html">О игре</a></li>
                 <li><a href="gallery.html">Галерея</a></li>
             </ul>
         </nav>
@@ -22,16 +22,16 @@
 
     <main>
         <section>
-            <h2>Изображения</h2>
-            <img src="image1.jpg" alt="Описание изображения 1" class="gallery-image">
+            <h2>Изображения из Age of Empires II</h2>
+            <img src="image1.jpg" alt="Сцена из игры Age of Empires II" class="gallery-image">
             <p>Описание изображения, обтекающее его.</p>
-            <img src="image2.jpg" alt="Описание изображения 2" class="gallery-image">
+            <img src="image2.jpg" alt="Битва цивилизаций в Age of Empires II" class="gallery-image">
             <p>Описание изображения, обтекающее его.</p>
         </section>
     </main>
 
     <footer>
-        <p>© 2024 Мой сайт</p>
+        <p>© 2024 Age of Empires II Fan Site</p>
     </footer>
 
     <script src="script.js"></script>
