--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="A site about my favorite book/game">
-    <meta name="keywords" content="book, game, hobby">
+    <meta name="description" content="Age of Empires II fan site">
+    <meta name="keywords" content="Age of Empires II, AoE2, strategy game">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Моя любимая книга/игра</title>
+    <title>Age of Empires II</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Моя любимая книга/игра</h1>
+        <h1>Age of Empires II: Легендарная игра о средневековье</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="about.html">О книге/игре</a></li>
+                <li><a href="about.html">О игре</a></li>
                 <li><a href="gallery.html">Галерея</a></li>
             </ul>
         </nav>
@@ -23,13 +23,13 @@
     <main>
         <section>
             <h2>Добро пожаловать</h2>
-            <p>Это сайт, посвящённый моей любимой книге или игре. Здесь вы найдёте информацию о сюжете, персонажах и галерею изображений.</p>
-            <a href="about.html#characters">Перейти к разделу о персонажах</a>
+            <p>Добро пожаловать на сайт, посвящённый игре Age of Empires II — одной из самых популярных стратегий в реальном времени. Здесь вы найдёте информацию о самой игре, её особенностях, игровых цивилизациях, а также полезные советы для успешного ведения боя и расширения империи.</p>
+            <a href="about.html">Узнать больше о Age of Empires II</a>
         </section>
     </main>
 
     <footer>
-        <p>© 2024 Мой сайт</p>
+        <p>© 2024 Age of Empires II Fan Site</p>
     </footer>
 
     <script src="script.js"></script>
