--- a/gallery.html
+++ b/gallery.html
@@ -21,14 +21,23 @@
     </header>
 
     <main>
-        <section>
-            <h2>Изображения из Age of Empires II</h2>
-            <img src="image1.jpg" alt="Сцена из игры Age of Empires II" class="gallery-image">
-            <p>Описание изображения, обтекающее его.</p>
-            <img src="image2.jpg" alt="Битва цивилизаций в Age of Empires II" class="gallery-image">
-            <p>Описание изображения, обтекающее его.</p>
-        </section>
-    </main>
+      <section class="gallery-section">
+          <div>
+              <img src="image1.jpg" alt="Сцена из игры Age of Empires II" class="gallery-image">
+              <p class="gallery-description">Сцена из игры Age of Empires II</p>
+          </div>
+          <div>
+              <img src="image2.jpg" alt="Битва цивилизаций в Age of Empires II" class="gallery-image">
+              <p class="gallery-description">Битва цивилизаций в Age of Empires II</p>
+          </div>
+          <div>
+              <img src="image3.jpg" alt="Средневековый замок в Age of Empires II" class="gallery-image">
+              <p class="gallery-description">Средневековый замок в Age of Empires II</p>
+          </div>
+          <!-- Добавь столько изображений, сколько нужно -->
+      </section>
+  </main>
+  
 
     <footer>
         <p>© 2024 Age of Empires II Fan Site</p>
