--- a/gallery.html
+++ b/gallery.html
@@ -21,22 +21,25 @@
     </header>
 
     <main>
-      <section class="gallery-section">
-          <div>
+      <section>
+          <div class="gallery-item">
               <img src="image1.jpg" alt="Сцена из игры Age of Empires II" class="gallery-image">
-              <p class="gallery-description">Сцена из игры Age of Empires II</p>
+              <p class="gallery-description">Сцена из игры Age of Empires II. Это описание обтекает изображение и располагается рядом, а не под ним.</p>
           </div>
-          <div>
+          
+          <div class="gallery-item">
               <img src="image2.jpg" alt="Битва цивилизаций в Age of Empires II" class="gallery-image">
-              <p class="gallery-description">Битва цивилизаций в Age of Empires II</p>
+              <p class="gallery-description">Битва цивилизаций в Age of Empires II. Теперь текст обтекает изображение, создавая более гармоничный вид.</p>
           </div>
-          <div>
+  
+          <div class="gallery-item">
               <img src="image3.jpg" alt="Средневековый замок в Age of Empires II" class="gallery-image">
-              <p class="gallery-description">Средневековый замок в Age of Empires II</p>
+              <p class="gallery-description">Средневековый замок в Age of Empires II. Это пример, как можно использовать обтекание, чтобы текст шёл рядом с изображением.</p>
           </div>
-          <!-- Добавь столько изображений, сколько нужно -->
+          <!-- Добавь другие элементы галереи по мере необходимости -->
       </section>
   </main>
+  
   
 
     <footer>
