--- a/gallery.html
+++ b/gallery.html
@@ -24,17 +24,17 @@
       <section>
           <div class="gallery-item">
               <img src="image1.jpg" alt="Сцена из игры Age of Empires II" class="gallery-image">
-              <p class="gallery-description">Сцена из игры Age of Empires II. Это описание обтекает изображение и располагается рядом, а не под ним.</p>
+              <p class="gallery-description">Сцена из игры Age of Empires II. Показана часть цивилизации с выходом к морю</p>
           </div>
           
           <div class="gallery-item">
               <img src="image2.jpg" alt="Битва цивилизаций в Age of Empires II" class="gallery-image">
-              <p class="gallery-description">Битва цивилизаций в Age of Empires II. Теперь текст обтекает изображение, создавая более гармоничный вид.</p>
+              <p class="gallery-description">Битва цивилизаций в Age of Empires II. Разрушены основные ворота, добаваются стены, за счёт требушетов ломаются башни. Часть конницы уже зашла в город</p>
           </div>
   
           <div class="gallery-item">
               <img src="image3.jpg" alt="Средневековый замок в Age of Empires II" class="gallery-image">
-              <p class="gallery-description">Средневековый замок в Age of Empires II. Это пример, как можно использовать обтекание, чтобы текст шёл рядом с изображением.</p>
+              <p class="gallery-description">Средневековый замок в Age of Empires II. Один из замков тюрских цивилизаций</p>
           </div>
           <!-- Добавь другие элементы галереи по мере необходимости -->
       </section>
